--- a/styles/style.css
+++ b/styles/style.css
@@ -101,7 +101,7 @@ header {
 .welcome-section {
   max-width: 1350px;
   height: 600px;
-  background-image: url("../assets/vectorrr.png");
+  background-image: url('../assets/vectorrr.png');
   margin: 120px auto;
   background-size: cover;
   border-radius: 16px;
