finished best offer section

--- a/styles/style.css
+++ b/styles/style.css
@@ -207,3 +207,70 @@ margin-top: 48px;
 }
 
 /* finished place info section */
+
+/* here is offer section styles */
+
+.best-offer-container{
+  display: flex;
+  align-items: center;
+  /* gap: 70px; */
+  margin: 0px 140px 120px;
+}
+.offer-intro{
+  color: var(--primary-red-color);
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+}
+
+.offer-title{
+  color: var(--primary-black-color);
+font-family: Merriweather;
+font-size: 48px;
+font-weight: 900;
+text-transform: capitalize;
+margin-bottom: 25px;
+}
+.offer-description{
+  color: var(--secondary-black-color);
+font-family: Inter;
+font-size: 20px;
+font-weight: 400;
+line-height: 32px; /* 160% */
+margin-right: 85px;
+}
+.offer-image{
+  width: 250px;
+  margin-right: 220px;
+  border: 12px solid var(--primary-red-color);
+  border-radius: 100%;
+  padding: 20px;
+}
+
+.date{
+  color: var(--primary-red-color);
+font-family: Inter;
+font-size: 48px;
+font-weight: 700;
+}
+
+.time-description{
+  color: var(--secondary-black-color);
+font-family: Inter;
+font-size: 20px;
+font-weight: 400;
+line-height: 32px; /* 160% */
+
+}
+
+.time-image{
+  margin-top: 30px;
+}
+
+.offer-time-container{
+  position: relative;
+  right: 65px;
+  margin-top: 45px;
+}
+
+/* finished offer section  */
