--- a/styles/style.css
+++ b/styles/style.css
@@ -312,3 +312,39 @@ margin: 28px 352px 68px;
 }
 
 /* complete holiday sale section styles */
+
+/* here is shopping description section styles */
+
+.shopping-container{
+  margin-left: 140px;
+  margin-top: 120px;
+
+}
+.shopping-intro{
+  color: var(--primary-red-color);
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+
+}
+
+.shopping-title{
+  color: var(--primary-black-color);
+font-family: Merriweather;
+font-size: 48px;
+font-weight: 900;
+text-transform: capitalize;
+
+}
+
+.shopping-description{
+  color: var(--secondary-black-color);
+font-family: Inter;
+font-size: 20px;
+font-weight: 400;
+line-height: 32px; /* 160% */
+    margin: 20px 500px 50px 0px;
+
+}
+
+/* finished shopping description section */
