--- a/styles/style.css
+++ b/styles/style.css
@@ -364,3 +364,64 @@ line-height: 32px; /* 160% */
 }
 
 /* finished shopping Portfolio section styles */
+
+/* here is subscribe section styles */
+
+.subscribe-container{
+  background-color: rgba(255, 0, 0, 0.05);
+  margin: 0px 120px 120px;
+  border-radius: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.mail{
+  margin-top: 80px;
+margin-bottom: 40px;
+}
+.subscribe-title{
+  color: #070211;
+text-align: center;
+font-family: Merriweather;
+font-size: 48px;
+font-weight: 900;
+text-transform: capitalize;
+margin-bottom: 20px;
+}
+.subscribe-description{
+  color: rgba(7, 2, 17, 0.60);
+text-align: center;
+font-family: Inter;
+font-size: 20px;
+font-weight: 400;
+line-height: 32px; /* 160% */
+margin:0px 200px 48px;
+
+}
+.subscribe-option{
+  margin-bottom: 80px;
+  display: flex;
+  
+}
+
+
+#mail-us{
+  background-color: var(--primary-white-color);
+  border: none;
+  padding-left: 30px;
+  padding-right: 185px;
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
+}
+.subscribe-button{
+background-color: var(--primary-red-color);
+padding: 24px 70px;
+border: none;
+color: var(--primary-white-color);
+border-top-right-radius: 30px;
+border-bottom-right-radius: 30px;
+
+}
+
+/* finished subscribe section styles */
